final work, 2 pages

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <a class="list" href="">about us</a>
                                     </li>
                                     <li>
-                                        <a class="list" href="">services</a>
+                                        <a class="list" target="_blank" href="file:///D:/%D0%93%D0%B0%D0%B4%D0%B0%D1%80%D1%8C/%D0%9F%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D1%8B/final%20work/second_page.html">services</a>
                                     </li>
                                     <li>
                                         <a class="list" href="">team</a>
@@ -86,7 +86,7 @@
                                         <a class="list" href="">publications</a>
                                     </li>
                                     <li id="showModal">
-                                        <a class="list" href="">contact</a>
+                                        <a class="list" href="#">contact</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -166,7 +166,7 @@
                     <h2 class="wrapp-title-accent">What can we do better than others?</h2>
                     <div class="card-container">
                         <div class="card">
-                            <img class="card-logo" src="images/icon.svg" alt="card-logo">
+                            <img class="card-logo" src="images/icon_1.svg" alt="commerce">
                             <h3 class="card-title">IT and e-commerce</h3>
                             <p class="card-text">
                                 An endless stream of contracts, tax issues, labor relations, 
@@ -175,7 +175,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <img class="card-logo" src="images/icon2.svg" alt="card-logo">
+                            <img class="card-logo" src="images/icon_2.svg" alt="support">
                             <h3 class="card-title">Comprehensive daily legal support</h3>
                             <p class="card-text">
                                 In addition, over time, the work will become the same type and 
@@ -185,7 +185,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <img class="card-logo" src="images/icon3.svg" alt="card-logo">
+                            <img class="card-logo" src="images/icon_3.svg" alt="corporate">
                             <h3 class="card-title">Structuring corporate relationships</h3>
                             <p class="card-text">
                                 Instead of just providing legal services, we will hire a lawyer 
@@ -193,7 +193,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <img class="card-logo" src="images/icon4.svg" alt="card-logo">
+                            <img class="card-logo" src="images/icon_4.svg" alt="relations">
                             <h3 class="card-title">Building contractual relations</h3>
                             <p class="card-text">
                                 Once a week, or week after month, you have your own lawyer by your 
@@ -202,7 +202,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <img class="card-logo" src="images/icon5.svg" alt="card-logo">
+                            <img class="card-logo" src="images/icon_5.svg" alt="protection">
                             <h3 class="card-title">Protection of business, intellectual property</h3>
                             <p class="card-text">
                                 And all the other time he will work on new diverse projects, so he 
@@ -211,7 +211,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <img class="card-logo" src="images/icon6.svg" alt="card-logo">
+                            <img class="card-logo" src="images/icon_6.svg" alt="court">
                             <h3 class="card-title">Judicial representation</h3>
                             <p class="card-text">
                                 Is it a small, medium-sized company or a market leader? Local business 
